<resources>
    <string name="app_name">Tourist Assistance App</string>
    <string name="title_home">Home</string>
    <string name="title_translator">Translator</string>
    <string name="title_touristspots">Places</string>
    <string name="title_dictionary">Dictionary</string>
    <string name="title_about">Developers</string>

    // For speech to text
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>

    <string name="location_image">Location Image</string>
    <string name="location_title">Location Title</string>
    <string name="location_description">Location Description</string>
    <string name="button_locate">Locate</string>
    <string name="speech_input">Input speech here</string>
    <string name="todo">TODO</string>
    <string name="outputSpeech">Output speech here</string>
    <string name="input">Input</string>
    <string name="output">Output</string>
    <string name="speak">Speak</string>

    <string name="chooseLanguage">Choose a Language</string>
    <string name="selectLanguage">Select Language</string>
    <string name="translate">Translate</string>
    <string name="resultGoesHereText">Translated Words goes here</string>
    <string name="english">English</string>
    <string name="filipino">Filipino</string>
    <string name="cebuano">Cebuano</string>
    <string name="optionLanguages">See the words in these languages below</string>
    <string name="translationHere">Translation Here</string>
    <string name="convertText">Translate Text</string>
    <string name="convertSpeech">Translate Speech</string>
    <string-array name="languages">
        <item id="eng">English</item>
        <item id="ceb">Cebuano</item>
        <item id="fil">Filipino</item>
    </string-array>
</resources>
