<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <TextView
            android:id="@+id/fromText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Translate From:"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/fromLanguage"
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:layout_below="@+id/fromText"
            android:spinnerMode="dropdown"
            android:entries="@array/languages"
            android:prompt="@string/chooseLanguage"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button">
        </Spinner>

        <EditText
            android:id="@+id/fromTextLang"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:text="@string/selectLanguage"
            android:textSize="15sp"
            android:inputType="textMultiLine"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <TextView
            android:id="@+id/toText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Translate To:"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/toLanguage"
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:layout_below="@+id/toText"
            android:spinnerMode="dropdown"
            android:entries="@array/languages"
            android:prompt="@string/chooseLanguage"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button">
        </Spinner>

        <EditText
            android:id="@+id/toTextLang"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:text="@string/selectLanguage"
            android:textSize="15sp"
            android:inputType="textMultiLine"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp">

        <Button
            android:id="@+id/translateButton"
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:text="@string/translate"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/convertSpeechButton"
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:text="@string/convertSpeech"
            android:layout_weight="1"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <EditText
            android:id="@+id/translationResult"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text=""
            android:hint="@string/resultGoesHereText"
            android:textSize="15sp"
            android:textAlignment="center" />
    </RelativeLayout>
</LinearLayout>